--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,7 @@ jobs:
           python-version: 3.8
 
       - name: Set up Poetry
-        uses: Gr1N/setup-poetry@v4
+        run: python -m pip install poetry
 
       - name: Build Wheel and Tarball
         run: poetry build -vvv
