--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,4 +33,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: "built-package"
-          args: "dist/*"
+          path: "dist/*"
