--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,6 +23,9 @@ jobs:
         with:
           python-version: 3.8
 
+      - name: Run automated tests
+        run: python -m unittest -v
+
       - name: Set up Poetry
         run: python -m pip install poetry
 
